# oesis-program-specs

./: .gitignore  .markdownlint-cli2.jsonc  00-version-labels-and-lanes.md  01-core-thesis-and-framing.md  02-problem-opportunity-and-market-gap.md  03-originality-and-positioning.md  06-network-of-networks-concepts.md  07-information-layer-and-functional-recovery.md  08-kpi-framework.md  09-phasing-v0.1-v1.0-v1.5.md  11-next-docs-to-write.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.md  Makefile  NOTICE.md  PROGRAM-NOTICE.md  PROGRAM.md  README.md  SECURITY.md  functional-state-and-response-model.md  pyproject.toml  sync-summary.json  v1-program-path-forward-source-pack-2026-04-12 copy.md  version-manifest.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
architecture/: README.md  reference-stack.md
artifacts/: README.md
contracts/: README.md  consent-record-schema.md  evidence-mode-and-observability.md  evidence-summary-schema.md  node-observation-schema.md  node-registry-schema.md  parcel-context-schema.md  parcel-state-schema.md  rights-request-schema.md  sharing-settings-schema.md
docs/: README.md
hardware/: NOTICE.md  README.md
legal/: GOVERNANCE.md  README.md  dataset-release-policy.md  holdback-list.md  internal-operator-access-policy.md  ip.md  pilot-and-research-data-agreement-template.md  provisional-figure-captions-parcel-state.md  provisional-figures-parcel-state.md  provisional-inventor-questionnaire-prefill.md  provisional-one-page-summary-parcel-state.md  provisional-packet-draft-parcel-state.md  provisional-packet-outline.md  (+3 more)
(+1094 files in other folders)
